add fqdn to nginx

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: nextcry
   author: Benjamin Akhras
   description: Nextcry Vulnerablity.
   company: Austrian Institute of Technology
