--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: Nextcry Vulnerablity.
   company: Austrian Institute of Technology
 
-  license: license (GPLv2, CC-BY, etc)
+  license: GPL-3.0
 
   min_ansible_version: 1.2
 
