--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,23 +1,21 @@
 ---
-
 - name: Install nextcry-php from deb
   tags: [install]
-  include_tasks: install_php.yml
+  ansible.builtin.include_tasks: install_php.yml
 
 - name: Install cloud
   tags: [install]
-  include_tasks: cloud.yml
+  ansible.builtin.include_tasks: cloud.yml
 
 - name: Install nginx
   tags: [install]
-  include_tasks: nginx.yml
+  ansible.builtin.include_tasks: nginx.yml
   when: manage_nginx
 
 - name: Configure cloud
   tags: [config]
-  include_tasks: config.yml
+  ansible.builtin.include_tasks: config.yml
 
 - name: Start services
   tags: [config, services]
-  include_tasks: services.yml
-
+  ansible.builtin.include_tasks: services.yml
