--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,22 +1,21 @@
 ---
-nextcry_php_url: "https://github.com/ait-cs-IaaS/nextcry-php/releases/download/v1.0/nextcry-php.deb"
-nextcry_php_dpkg_name: "nextcry-php"
-cloud_fqdn: "localhost"
+nextcry_php_url: https://github.com/ait-cs-IaaS/nextcry-php/releases/download/v1.0/nextcry-php.deb
+nextcry_php_dpkg_name: nextcry-php
+cloud_fqdn: localhost
 cloud_trusted_domains:
   - "{{ cloud_fqdn }}"
 
 ssl_cert: ""
 ssl_key: ""
 
-listen: "80 default_server"
-listen_ssl: "443 ssl default_server"
+listen: 80 default_server
+listen_ssl: 443 ssl default_server
 
 manage_nginx: true
 
-cloud_version: "owncloud-10.4.1"
-cloud_download_url: "https://download.owncloud.com/server/stable/owncloud-{{ owncloud_version }}.tar.bz2"
+cloud_version: owncloud-10.4.1
+cloud_download_url: https://download.owncloud.com/server/stable/owncloud-{{ owncloud_version }}.tar.bz2
 
 # for Nextcloud use config below instead:
 # cloud_version: "latest-16"
 # cloud_download_url: "https://download.nextcloud.com/server/releases/{{ cloud_version }}.tar.bz2"
-
