--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
-- name: restart nginx
-  service:
+- name: Restart nginx
+  ansible.builtin.service:
     name: nginx
     state: restarted
   become: true
 
-- name: restart php
-  service:
+- name: Restart php
+  ansible.builtin.service:
     name: php-fpm
     state: restarted
   become: true
